debhelper (9.20130606) UNRELEASED; urgency=low

  * dh_installinit: Use absolute path for systemd tempfiles,
    for compatability with wheezy's systemd. Closes: #712727

 -- Joey Hess <joeyh@debian.org>  Tue, 18 Jun 2013 20:13:45 -0400

debhelper (9.20130605) unstable; urgency=low

  * dh_installchangelogs: Fix bug preventing automatic installation of
    upstream changelog. Closes: #711131

 -- Joey Hess <joeyh@debian.org>  Wed, 05 Jun 2013 12:28:51 -0400

debhelper (9.20130604) unstable; urgency=low

  * dh_installchangelogs: No longer automatically converts html changelogs.
    A plain text version can be provided as a second parameter, or it will
    generate a file with a pointer to the html changelog if not.
    html2text's reign of terror has ended. Closes: #562874
  * Allow building debhelper with USE_NLS=no to not require po4a to build.
    Closes: #709557
  * Correct broken patch for #706923.
    Closes: #707481
  * dh_installinit: Add appropriately versioned file-rc as an alternate
    when adding misc:Depends for an invoke-rc.d that supports upstart
    jobs. Closes: #709482

 -- Joey Hess <joeyh@debian.org>  Tue, 04 Jun 2013 11:27:29 -0400

debhelper (9.20130518) unstable; urgency=low

  * dh_installchangelogs: Write the changelog entry used for a binNMU,
    as flagged by binary-only=yes to a separate file, in order to work
    around infelicities in dpkg's multiarch support. Closes: #708218
    (Thanks, Ansgar Burchardt)
  * dh_installinit: Add versioned dependency on sysv-rc
    when shipping upstart jobs. Closes: #708720

 -- Joey Hess <joeyh@debian.org>  Sat, 18 May 2013 10:49:09 -0400

debhelper (9.20130516) unstable; urgency=low

  * Revert unsetting INSTALL_BASE. Closes: #708452 Reopens: #705141

 -- Joey Hess <joeyh@debian.org>  Thu, 16 May 2013 18:29:46 -0400

debhelper (9.20130509) unstable; urgency=low

  * dh_installinit: Remove obsolete systemd-tempfiles hack in postinst
    autoscript. Closes: #707159