@@ -2,6 +2,9 @@ debhelper (9.20130606) UNRELEASED; urgency=low
 
   * dh_installinit: Use absolute path for systemd tempfiles,
     for compatability with wheezy's systemd. Closes: #712727
+  * makefile buildsystem: Added heuristic to catch false positive in
+    makefile target detection code. Closes: #713257
+    Nasty make ... why won't it tell us what's in its pocketses?
 
  -- Joey Hess <joeyh@debian.org>  Tue, 18 Jun 2013 20:13:45 -0400
 
